--- a/src/com/v3pm_prototype/view/ScenarioComparison.fxml
+++ b/src/com/v3pm_prototype/view/ScenarioComparison.fxml
@@ -6,7 +6,7 @@
 <?import java.lang.*?>
 <?import javafx.scene.layout.*?>
 
-<VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" minHeight="-Infinity" minWidth="-Infinity" stylesheets="@V3PMGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.ScenarioComparisonController">
+<VBox maxHeight="-Infinity" maxWidth="1.7976931348623157E308" prefHeight="877.0" prefWidth="1751.0" stylesheets="@V3PMGUI.css" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="com.v3pm_prototype.view.controller.ScenarioComparisonController">
    <children>
       <Label styleClass="Titel1" text="Solution Comparison" />
       <Label styleClass="Titel2" text="Roadmap &amp; NPV:">
@@ -36,7 +36,7 @@
             </HBox>
          </children>
       </VBox>
-      <Label fx:id="lblSolution" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" prefHeight="71.0" prefWidth="1187.0" text="Sample TextTwo lines" wrapText="true" VBox.vgrow="ALWAYS">
+      <Label fx:id="lblSolution" alignment="TOP_LEFT" maxWidth="1.7976931348623157E308" prefHeight="71.0" text="Sample TextTwo lines" wrapText="true" VBox.vgrow="ALWAYS">
          <VBox.margin>
             <Insets top="4.0" />
          </VBox.margin>
@@ -51,9 +51,9 @@
             <Insets bottom="10.0" />
          </VBox.margin>
       </Label>
-      <HBox minHeight="300.0" VBox.vgrow="ALWAYS">
+      <HBox VBox.vgrow="ALWAYS">
          <children>
-            <BarChart fx:id="bcQuality" animated="false" prefHeight="300.0" title="Quality" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcQuality" animated="false" minHeight="220.0" prefHeight="300.0" title="Quality" HBox.hgrow="ALWAYS">
               <xAxis>
                 <CategoryAxis label="Process" side="BOTTOM" />
               </xAxis>
@@ -61,7 +61,7 @@
                 <NumberAxis label="Delta" side="LEFT" />
               </yAxis>
             </BarChart>
-            <BarChart fx:id="bcTime" animated="false" prefHeight="300.0" title="Time" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcTime" animated="false" minHeight="220.0" prefHeight="300.0" title="Time" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
@@ -69,7 +69,7 @@
                   <NumberAxis label="Delta" side="LEFT" />
                </yAxis>
             </BarChart>
-            <BarChart fx:id="bcOOP" animated="false" prefHeight="300.0" title="Operating Outflows" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcOOP" animated="false" minHeight="220.0" prefHeight="300.0" title="Operating Outflows" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
@@ -77,7 +77,7 @@
                   <NumberAxis label="Delta" side="LEFT" />
                </yAxis>
             </BarChart>
-            <BarChart fx:id="bcFixedCosts" animated="false" prefHeight="300.0" title="Fixed Costs" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcFixedCosts" animated="false" minHeight="220.0" prefHeight="300.0" title="Fixed Costs" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
@@ -97,7 +97,7 @@
             <Insets bottom="10.0" />
          </padding>
       </Label>
-      <BarChart fx:id="bcBrokenRestrictions" animated="false" VBox.vgrow="ALWAYS">
+      <BarChart fx:id="bcBrokenRestrictions" animated="false">
         <xAxis>
           <CategoryAxis side="BOTTOM" />
         </xAxis>
