--- a/src/com/v3pm_prototype/view/ScenarioComparison.fxml
+++ b/src/com/v3pm_prototype/view/ScenarioComparison.fxml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import javafx.scene.effect.*?>
 <?import javafx.scene.chart.*?>
 <?import javafx.geometry.*?>
 <?import javafx.scene.control.*?>
@@ -20,14 +21,14 @@
                <children>
                   <VBox prefHeight="200.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Label fx:id="lblScenarioName1" styleClass="Titel2" text="Scenario Name 1" />
+                        <Label fx:id="lblScenarioName1" styleClass="Scenario1" text="Scenario Name 1" textFill="#f3612d" />
                         <VBox fx:id="roadmapBox1" prefHeight="112.0" prefWidth="100.0" />
                         <Label fx:id="lblNPV1" text="NPV: 1234123" />
                      </children>
                   </VBox>
                   <VBox prefHeight="200.0" HBox.hgrow="ALWAYS">
                      <children>
-                        <Label fx:id="lblScenarioName2" styleClass="Titel2" text="Scenario Name 2" />
+                        <Label fx:id="lblScenarioName2" styleClass="Scenario2" text="Scenario Name 2" />
                         <VBox fx:id="roadmapBox2" prefHeight="200.0" prefWidth="100.0" />
                         <Label fx:id="lblNPV2" text="NPV: 1231231" />
                      </children>
@@ -53,7 +54,7 @@
       </Label>
       <HBox VBox.vgrow="ALWAYS">
          <children>
-            <BarChart fx:id="bcQuality" animated="false" minHeight="220.0" prefHeight="300.0" title="Quality" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcQuality" animated="false" legendVisible="false" minHeight="220.0" prefHeight="300.0" title="Quality" HBox.hgrow="ALWAYS">
               <xAxis>
                 <CategoryAxis label="Process" side="BOTTOM" />
               </xAxis>
@@ -61,7 +62,7 @@
                 <NumberAxis label="Delta" side="LEFT" />
               </yAxis>
             </BarChart>
-            <BarChart fx:id="bcTime" animated="false" minHeight="220.0" prefHeight="300.0" title="Time" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcTime" animated="false" legendVisible="false" minHeight="220.0" prefHeight="300.0" title="Time" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
@@ -69,7 +70,7 @@
                   <NumberAxis label="Delta" side="LEFT" />
                </yAxis>
             </BarChart>
-            <BarChart fx:id="bcOOP" animated="false" minHeight="220.0" prefHeight="300.0" title="Operating Outflows" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcOOP" animated="false" legendVisible="false" minHeight="220.0" prefHeight="300.0" title="Operating Outflows" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
@@ -77,7 +78,7 @@
                   <NumberAxis label="Delta" side="LEFT" />
                </yAxis>
             </BarChart>
-            <BarChart fx:id="bcFixedCosts" animated="false" minHeight="220.0" prefHeight="300.0" title="Fixed Costs" HBox.hgrow="ALWAYS">
+            <BarChart fx:id="bcFixedCosts" animated="false" legendVisible="false" minHeight="220.0" prefHeight="300.0" title="Fixed Costs" HBox.hgrow="ALWAYS">
                <xAxis>
                   <CategoryAxis label="Process" side="BOTTOM" />
                </xAxis>
