--- a/src/com/v3pm_prototype/view/ScenarioComparison.fxml
+++ b/src/com/v3pm_prototype/view/ScenarioComparison.fxml
@@ -88,24 +88,40 @@
             </BarChart>
          </children>
       </HBox>
-      <Label styleClass="Titel1" text="Restriction Comparison">
-         <VBox.margin>
-            <Insets top="20.0" />
-         </VBox.margin>
-      </Label>
-      <Label styleClass="Titel2" text="Broken Restrictions per Scenario:">
-         <padding>
-            <Insets bottom="10.0" />
-         </padding>
-      </Label>
-      <BarChart fx:id="bcBrokenRestrictions" animated="false">
-        <xAxis>
-          <CategoryAxis side="BOTTOM" />
-        </xAxis>
-        <yAxis>
-          <NumberAxis label="#Broken Restrictions" side="LEFT" />
-        </yAxis>
-      </BarChart>
+      <HBox>
+         <children>
+            <VBox>
+               <children>
+                  <Label styleClass="Titel1" text="Restriction Comparison">
+                     <VBox.margin>
+                        <Insets top="20.0" />
+                     </VBox.margin>
+                  </Label>
+                  <Label styleClass="Titel2" text="Broken Restrictions per Scenario:">
+                     <padding>
+                        <Insets bottom="10.0" />
+                     </padding>
+                  </Label>
+                  <BarChart fx:id="bcBrokenRestrictions" animated="false">
+                    <xAxis>
+                      <CategoryAxis side="BOTTOM" />
+                    </xAxis>
+                    <yAxis>
+                      <NumberAxis label="#Broken Restrictions" side="LEFT" />
+                    </yAxis>
+                  </BarChart>
+               </children>
+            </VBox>
+            <AreaChart fx:id="sacCashflows" HBox.hgrow="ALWAYS">
+              <xAxis>
+                <CategoryAxis side="BOTTOM" />
+              </xAxis>
+              <yAxis>
+                <NumberAxis side="LEFT" />
+              </yAxis>
+            </AreaChart>
+         </children>
+      </HBox>
    </children>
    <padding>
       <Insets bottom="10.0" left="10.0" right="10.0" top="10.0" />
